--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.1.0
+  intl: ^0.19.0
+  dio: ^5.4.0
+  provider: ^6.1.1
+  syncfusion_flutter_charts: ^31.0.0
+  syncfusion_flutter_gauges: ^31.0.0
+  google_fonts: ^6.1.0
+  web_socket_channel: ^2.4.0
+  shimmer: ^3.0.0
+  shared_preferences: ^2.2.2
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
