--- a/config.json
+++ b/config.json
@@ -43,5 +43,10 @@
         "validation_size": 0.1,
         "random_state": 42
     },
-    "timezone": "Asia/Kolkata"
+    "timezone": "Asia/Kolkata",
+    "ai": {
+        "entry_threshold": 0.55,
+        "exit_threshold": 0.5,
+        "min_confidence": 0.6
+    }
 }
