--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,7 @@ pandas==2.2.3
 
 # Broker Integration
 kiteconnect==3.9.6
+nsepython
 
 # WebSockets
 websockets==14.1
@@ -29,3 +30,10 @@ pytz==2024.2
 # Testing
 pytest==8.3.4
 pytest-asyncio==0.25.2
+
+# ML Dependencies
+xgboost
+torch
+scikit-learn
+numpy
+joblib
